added products collection
